# FileSearchTool

./: .gitignore  CMakeLists.txt  filterdialog.cpp  filterdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  searchengine.cpp  searchengine.h
.qtcreator/: CMakeLists.txt.user.67af73b
